--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,3 @@
 {
-  "plugins": [
-    "transform-es2015-modules-commonjs",
-    "transform-es2015-parameters",
-    "transform-es2015-destructuring"
-  ]
+  "presets": ["es2015"]
 }
