--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-transform-es2015-destructuring": "^6.9.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.7",
     "babel-plugin-transform-es2015-parameters": "^6.9.0",
+    "babel-preset-es2015": "^6.24.1",
     "codecov": "^1.0.1",
     "coffee-script": "^1.10.0",
     "commander": "^2.9.0",
